updating develop poms to master versions to avoid merge conflicts

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>nl.ebpi.wicket</groupId>
   <artifactId>multiselect</artifactId>
-  <version>0.9-SNAPSHOT</version>
+  <version>0.8</version>
   <packaging>jar</packaging>
 
   <name>Wicket MultiSelect</name>
